testsuite/bad/bad044.jl
int main() { 
   int while;
   return 1;
}
